--- a/main.css
+++ b/main.css
@@ -7,3 +7,10 @@ body{
     justify-content: center;
     font-size: 25px;
 }
+#LinksSection {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    margin-bottom: 10pt;
+    font-size: 12.5px;
+}
