--- a/main.css
+++ b/main.css
@@ -2,10 +2,19 @@ body{
     font-family: Arial, sans-serif;
     margin: 20px;
 }
-#WebsiteHeading {
-    display: flex;
-    justify-content: center;
-    font-size: 25px;
+#WebsiteHeading{
+    text-align: center;
+    margin-bottom: 2px;
+}
+#HeaderBtn{
+    font-size: 2em; /* Make it larger like a heading */
+    padding: 10px 20px;;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bolder;
+    background-color: white;
+    color: black;
 }
 #LinksSection {
     position: fixed;
