--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body{
     color: white;
 }
 #LinksSection {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
     margin-bottom: 10pt;
