--- a/main.css
+++ b/main.css
@@ -20,9 +20,13 @@ body{
     color: white;
 }
 #LinksSection {
-    position: absolute;
     bottom: 0;
     width: 100%;
+    margin-top: 10pt;
     margin-bottom: 10pt;
     font-size: 12.5px;
+}
+#JoinBtn{
+    background-color:dimgray ;
+    color: white;
 }
